* Fully support SLURM extern step for shifter sshd
* Add imagegw heartbeating capability to increase robustness of image pulls
* Add image expiration capability to allow images age out or be
  administratively removed
* Allow sshd to be explicitly enabled in SLURM integration
* Allow ccm-emulation-mode to be explicity enabled in SLURM integration
* Make perNodeCache pre-unlink cache files to create no mess for administrator
  to clean up
* Only allow shifter to automatically create mount points on its tmpfs/ramfs
* Enable docker-type images to implicitly assume "latest" if no tag is 
  specified by user
* Ensure failed image pulls are fully cleaned up
* Check if the current image version is installed on the platform before pulling
* Remove old debugging functionality
* Allow /etc required files to re-try copy (fixes dvs copy issue)
* Require admin capability to autoexpire
* By default run sshd as user, add udiRoot.conf option to run with privilege


16.04.0
===========
+  Modified repo layout to push udiRoot to top-level
+  Added RPM spec file for RHEL- and SLES-based systems
+  Added writable perNodeCache capability
+  Enabled BB support

15.12.1
===========
+  Fixed bug preventing autoshift/ccm in slurm/udiRoot integration from 
   chdir'ing to permission restricted paths on root-squashed filesystems
+  Fixed bug on some systems where the udiRoot would get recursively mounted in
   the odd situation that the udiMount point overlapped the VFS being mounted
+  Corrected udiRoot testsuite to run in automated test framework

15.12.0
===========
+  Integrate external deps (util-linux/mount, openssh, libressl) into automake
   build
+  Create /var/empty earlier in case an image already provides it (need it no
   matter what)
+  Renamed ImageGwConnect to shifterimg
+  Updated ImageGwConnect helper application to work with changes to imagegw
   output and allow user to specify image type. Add image listing support.
+  Created iniital README
