@@ -39,13 +39,14 @@ Shifter, please install the "shifter-runtime" package.
 Summary:  Runtime component(s) for NERSC Shifter (formerly udiRoot)
 Group:    System Environment/Base
 %if 0%{?suse_version}
-BuildRequires: munge, libcurl-devel, libjson-c-devel, pam-devel
+BuildRequires: munge, libcurl-devel, libjson-c-devel, pam-devel, libcap-devel
 %else
 BuildRequires: munge-devel, gcc, gcc-c++
 BuildRequires: libtool autoconf automake
 BuildRequires: libcurl libcurl-devel
 BuildRequires: json-c json-c-devel
 BuildRequires: pam-devel
+BuildRequires: libcap-devel
 %endif
 
 %description runtime
